apps/kinetiq-backend/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kinetiq-backend
  namespace: kinetiq-backend-prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"

spec:
  ingressClassName: nginx
  rules:
    - host: api.kinetiq.scesi.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kinetiq-backend
                port:
                  number: 80
  tls:
    - hosts:
        - api.kinetiq.scesi.dev
      secretName: kinetiq-backend-prod-tls-secret
